Update was made in configuration.properties

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-email=caputdraconis183@gmail.com
-password=@Mednasa@183?
-accountName=onur
+email=
+password=
+accountName=
 URL=https://www.imdb.com/
